--- a/Projects/ResponsivePortfolio/index.html
+++ b/Projects/ResponsivePortfolio/index.html
@@ -56,8 +56,8 @@
 
         <!-- Hire and Contact Buttons -->
         <div class="btn-group">
-          <a href="#" class="btn">Hire</a>
-          <a href="#contact" class="btn">Contact</a>
+          <a href="#" class="gradient-btn">Hire</a>
+          <a href="#contact" class="gradient-btn">Contact</a>
         </div>
       </div>
 
@@ -174,7 +174,7 @@
             <img src="project1.png" alt="project 1" class="img">
             <h2>Project-1</h2>
             <p>A profile card.</p>
-            <button class="btn">Review</button>
+            <button class="gradient-btn">Review</button>
           </div>
         </div>
 
@@ -184,7 +184,7 @@
             <img src="project2.png" alt="project 2" class="img">
             <h2>Project-2</h2>
             <p>A transparent login page.</p>
-            <button class="btn">Review</button>
+            <button class="gradient-btn">Review</button>
           </div>
         </div>
 
@@ -194,7 +194,7 @@
             <img src="project3.png" alt="project 3" class="img">
             <h2>Project-3</h2>
             <p>A formal login page.</p>
-            <button class="btn">Review</button>
+            <button class="gradient-btn">Review</button>
           </div>
         </div>
       </div>
