--- a/Projects/ResponsivePortfolio/index.html
+++ b/Projects/ResponsivePortfolio/index.html
@@ -13,17 +13,22 @@
 
 <!-- ================= HEADER ================= -->
 <header class="header">
-  <a href="#home" class="logo">Rafi <span>Verse</span></a>
-  <i class='bx bx-menu' id="menu-icon"></i>
+  <a href="#home" class="logo">Rafequl <span>Islam</span></a>
+  
   <nav class="navbar">
     <a href="#home">Home</a>
     <a href="#about">About</a>
-    <a href="#education">Education</a>
     <a href="#skills">Skills</a>
     <a href="#projects">Projects</a>
     <a href="#contact">Contact</a>
   </nav>
-  <button class="gradient-btn" id="contact-btn">Contact Me</button>
+
+  <div class="header-btns">
+    <button id="theme-toggle" class="theme-btn">
+      <i class='bx bx-moon'></i>
+    </button>
+    <i class='bx bx-menu' id="menu-icon"></i>
+  </div>
 </header>
 
 <!-- ================= HOME ================= -->
@@ -31,7 +36,7 @@
   <div class="home-content">
     <h1>Hi, It's <span>Rafik</span></h1>
     <h3>I am a <span>CSE student.</span></h3>
-    <p>I am a Computer Science and Engineering student passionate about solving problems and building impactful projects. I have experience in web development and constantly explore new technologies to enhance my skills.</p>
+    <p>"I’m a CSE student focused on building clean, functional web applications and solving complex problems through code. Let’s build something great together."</p>
 
     <div class="social-icons">
       <a href="https://x.com/rafiverse" target="_blank" class="social-icon"><i class="bx bxl-twitter"></i></a>
@@ -41,9 +46,9 @@
     </div>
 
     <div class="btn-group">
-      <a href="#contact" class="gradient-btn">Hire</a>
-      <a href="#contact" class="gradient-btn">Contact</a>
-    </div>
+    <a href="#contact" class="gradient-btn">Hire</a>
+    <a href="#contact" class="gradient-btn">Contact</a>
+</div>
   </div>
 
   <div class="home-image">
@@ -53,73 +58,98 @@
 
 <!-- ================= ABOUT ================= -->
 <section class="about" id="about">
-  <div class="about-image">
-    <img src="pp.jpeg" alt="Rafequl Islam's picture" />
-  </div>
-  <div class="about-content">
-    <h2>About <span>Me</span></h2>
-    <p>I am a passionate Computer Science and Engineering student who enjoys solving challenging problems with efficient algorithms. I have hands-on experience in web development and programming, and I am continuously learning new technologies to stay updated. I strive to build projects that make a real-world impact and demonstrate my skills effectively.</p>
-    <a href="#" class="gradient-btn">Read More</a>
-  </div>
-</section>
+  <div class="about-container">
+    
+    <div class="about-top">
+      <div class="about-image">
+        <img src="pp.jpeg" alt="Rafequl Islam's picture" />
+      </div>
+      <div class="about-content">
+        <h2>About <span>Me</span></h2>
+        <p>
+          I am a CSE student at Eastern University, dedicated to mastering the art of software development. 
+          I don't just write code; I build solutions that are efficient, scalable, and user-friendly.
+          I focus on creating high-quality web applications and solving complex problems.
+        </p>
+      </div>
+    </div>
 
-<!-- ================= EDUCATION ================= -->
-<section class="education" id="education">
-  <h2 class="heading">My Education</h2>
-  <div class="edu-container">
-    <div class="edu-card">
-      <div class="edu-card-info">
+    <div class="about-info">
+      <div class="edu-card">
         <i class='bx bxs-graduation'></i>
         <h3>Bachelor of CSE</h3>
-        <p>Eastern University</p>
-        <p>2024 - Present</p>
-        <p>GPA: 3.8/4.0</p>
+        <p class="inst">Eastern University</p> <span class="year">2024 - Present</span>
+        <div class="gpa-tag">GPA: 3.8/4.0</div>
       </div>
-    </div>
-    <div class="edu-card">
-      <div class="edu-card-info">
-        <i class="bx bxs-book"></i>
-        <h3>Higher Secondary (HSC)</h3>
-        <p>Govt.Dhaka Udyan College</p>
-        <p>2021 - 2023</p>
-        <p>GPA: 4.83/5.0</p>
-      </div>
-    </div>
-    <div class="edu-card">
-      <div class="edu-card-info">
+
+      <div class="edu-card">
+        <i class="bx bxs-book-bookmark"></i>
+        <h3>HSC (Science)</h3>
+        <p class="inst">Govt. Dhaka Udyan College</p> <span class="year">2021 - 2023</span>
+        <div class="gpa-tag">GPA: 4.83/5.0</div>
+      </div> 
+
+      <div class="edu-card">
         <i class="bx bxs-school"></i>
-        <h3>Secondary School (SSC)</h3>
-        <p>Aim Plus(+) Ideal School</p>
-        <p>2019 - 2021</p>
-        <p>GPA: 4.83/5.0</p>
+        <h3>SSC (Science)</h3>
+        <p class="inst">Aim Plus(+) Ideal School</p> <span class="year">2019 - 2021</span>
+        <div class="gpa-tag">GPA: 4.83/5.0</div>
       </div>
     </div>
+
   </div>
 </section>
 
 <!-- ================= SKILLS ================= -->
 <section class="skills" id="skills">
-  <h2 class="heading">Skills</h2>
+  <h2 class="heading">Technical <span>Skills</span></h2>
+
   <div class="skills-container">
     <div class="skills-box">
       <div class="skills-info">
-        <i class='bx bxl-javascript' ></i>
-        <h4>JavaScript</h4>
-        <p>Write clean ES6+ code for DOM manipulation, events, and API requests.</p>
+        <i class='bx bxl-java'></i>
+        <h4>Java & OOP</h4>
+        <p>Mastering Object-Oriented principles like Inheritance and Polymorphism in Java.</p>
       </div>
     </div>
+
     <div class="skills-box">
       <div class="skills-info">
-        <i class='bx bxl-css3' ></i>
-        <h4>CSS</h4>
-        <p>Create responsive layouts using Flexbox, Grid, and modern CSS techniques.</p>
+        <i class='bx bx-code-block'></i>
+        <h4>DSA with Java</h4>
+        <p>Solving complex problems using efficient Data Structures and Algorithms.</p>
       </div>
     </div>
+
     <div class="skills-box">
       <div class="skills-info">
-        <i class='bx bxl-html5' ></i>
-        <h4>HTML</h4>
-        <p>Build semantic, accessible markup following web standards.</p>
+        <i class='bx bxl-python'></i>
+        <h4>Python Security</h4>
+        <p>Developing custom scripts for automation and Penetration Testing tasks.</p>
+      </div>
+    </div>
+
+    <div class="skills-box">
+      <div class="skills-info">
+        <i class='bx bxl-tux'></i>
+        <h4>Linux & Bash</h4>
+        <p>Proficient in CLI, Shell Scripting, and managing Linux environments.</p>
+      </div>
+    </div>
+
+    <div class="skills-box">
+      <div class="skills-info">
+        <i class='bx bxl-github'></i>
+        <h4>Git & GitHub</h4>
+        <p>Collaborating on projects with clean branching and version control workflows.</p>
+      </div>
+    </div>
+
+    <div class="skills-box">
+      <div class="skills-info">
+        <i class='bx bx-globe'></i>
+        <h4>Web Tech</h4>
+        <p>Building responsive, modern websites using HTML5, CSS3, and JavaScript.</p>
       </div>
     </div>
   </div>
@@ -127,14 +157,13 @@
 
 <!-- ================= PROJECTS ================= -->
 <section class="projects" id="projects">
-  <h2 class="heading">Projects</h2>
+  <h2 class="heading"><span>Projects</span></h2>
   <div class="projects-container">
     <div class="projects-box">
       <div class="projects-card">
         <img src="project1.png" alt="project 1" class="img">
         <h2>Project-1</h2>
         <p>A profile card.</p>
-        <button class="gradient-btn">Review</button>
       </div>
     </div>
     <div class="projects-box">
@@ -142,7 +171,6 @@
         <img src="project2.png" alt="project 2" class="img">
         <h2>Project-2</h2>
         <p>A transparent login page.</p>
-        <button class="gradient-btn">Review</button>
       </div>
     </div>
     <div class="projects-box">
@@ -150,7 +178,6 @@
         <img src="project3.png" alt="project 3" class="img">
         <h2>Project-3</h2>
         <p>A formal login page.</p>
-        <button class="gradient-btn">Review</button>
       </div>
     </div>
   </div>
@@ -158,23 +185,25 @@
 
 <!-- ================= CONTACT ================= -->
 <section class="contact" id="contact">
-  <h2 class="heading">Contact Me</h2>
-  <form id="contact-form">
-    <div class="input-group1">
-      <div class="input-box">
-        <input type="text" name="name" placeholder="Full Name" required>
-        <input type="email" name="email" placeholder="Email" required>
-      </div>
-      <div class="input-box">
-        <input type="tel" name="phone" placeholder="Phone Number">
-        <input type="text" name="subject" placeholder="Subject" required>
-      </div>
-    </div>
-    <div class="input-group2">
-      <textarea name="message" placeholder="Your Message" rows="10" required></textarea>
-      <input type="submit" value="Send Message" class="gradient-btn">
-    </div>
-  </form>
+    <h2 class="heading">Contact <span>Me</span></h2>
+
+    <form id="contact-form">
+        <div class="input-group">
+            <div class="input-box">
+                <input type="text" name="from_name" id="name" placeholder="Full Name" required>
+                <input type="email" name="email_id" id="email" placeholder="Email Address" required>
+            </div>
+            <div class="input-box">
+                <input type="tel" name="phone_num" id="phone" placeholder="Mobile Number">
+                <input type="text" name="subject" id="subject" placeholder="Email Subject">
+            </div>
+        </div>
+
+        <div class="input-group-2">
+            <textarea name="message" id="message" cols="30" rows="10" placeholder="Your Message" required></textarea>
+            <button type="submit" class="btn">Send Message</button>
+        </div>
+    </form>
 </section>
 
 <!-- ================= FOOTER ================= -->
@@ -188,7 +217,6 @@
   <ul class="list">
     <li><a href="#">FAQ</a></li>
     <li><a href="#about">About</a></li>
-    <li><a href="#education">Education</a></li>
     <li><a href="#skills">Skills</a></li>
     <li><a href="#projects">Projects</a></li>
     <li><a href="#contact">Contact</a></li>
