--- a/Projects/ResponsivePortfolio/index.html
+++ b/Projects/ResponsivePortfolio/index.html
@@ -190,11 +190,11 @@
     <form id="contact-form">
         <div class="input-group">
             <div class="input-box">
-                <input type="text" name="from_name" id="name" placeholder="Full Name" required>
-                <input type="email" name="email_id" id="email" placeholder="Email Address" required>
+                <input type="text" name="name" id="name" placeholder="Full Name" required>
+                <input type="email" name="email" id="email" placeholder="Email Address" required>
             </div>
             <div class="input-box">
-                <input type="tel" name="phone_num" id="phone" placeholder="Mobile Number">
+                <input type="tel" name="phone" id="phone" placeholder="Mobile Number">
                 <input type="text" name="subject" id="subject" placeholder="Email Subject">
             </div>
         </div>
